# openusm

./: CMakeLists.txt  MinHook.h  README.md  USM.cpp  debug_menu.cpp  debug_menu2.cpp  igozoomoutmap.cpp  main.cpp  main_menu_start.cpp  main_menu_start.h  memoryunitmanager.h  modloader.h  pause_menu_awards.cpp  pause_menu_awards.h  script_object.h
src/: ai_player_controller.h  alternate_costumes.cpp  alternate_costumes.h  ambient_audio_manager.cpp  app.cpp  app.h  camera_mode.cpp  console.cpp  cursor.h  debug_menu.cpp  debug_menu.h  debug_menu2.h  debug_menu_extra.cpp  debug_render.h  devopt.cpp  entity.h  entity_base.cpp  entity_base.h  entity_handle_manager.cpp  fe_health_widget.cpp  fe_health_widget.h  femanager.cpp  femanager.h  femenusystem.cpp  femenusystem.h  femultilinetext.cpp  femultilinetext.h  fetext.cpp  fixedstring.h  frontendmenusystem.cpp  game.cpp  game.h  igozoomoutmap.cpp  igozoomoutmap.h  input_mgr.cpp  keyboard_device.cpp  levelmenu.cpp  levelmenu.h  localized_string_table.cpp  localized_string_table.h  (+75 more)
src/chuck/vm/: script_library_class.h  script_object.h  vm_stack.h  vm_thread.cpp
src/ngl/shaders/: us_person.cpp
src/ngl/src/dx/: ngl_dx_core.cpp  ngl_dx_draw.cpp  ngl_dx_shader.cpp
src/utility/: common.h  func_wrapper.h  mod.h  trace.h
src/variables/: variables.cpp  variables.h
